@@ -2007,11 +2007,11 @@ operator|.
 name|getDependencies
 argument_list|()
 decl_stmt|;
-name|Collection
+name|Map
 name|dependencies
 init|=
 operator|new
-name|LinkedHashSet
+name|LinkedHashMap
 argument_list|()
 decl_stmt|;
 comment|// it's important to respect order
@@ -2111,13 +2111,33 @@ block|}
 name|IvyNode
 name|depNode
 init|=
+operator|(
+name|IvyNode
+operator|)
+name|dependencies
+operator|.
+name|get
+argument_list|(
+name|requestedDependencyRevisionId
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|depNode
+operator|==
+literal|null
+condition|)
+block|{
+name|depNode
+operator|=
 name|data
 operator|.
 name|getNode
 argument_list|(
 name|requestedDependencyRevisionId
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|depNode
@@ -2234,14 +2254,19 @@ argument_list|)
 expr_stmt|;
 name|dependencies
 operator|.
-name|add
+name|put
 argument_list|(
+name|requestedDependencyRevisionId
+argument_list|,
 name|depNode
 argument_list|)
 expr_stmt|;
 block|}
 return|return
 name|dependencies
+operator|.
+name|values
+argument_list|()
 return|;
 block|}
 specifier|private
