@@ -25938,6 +25938,214 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveMultipleSameDependency
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/multiple-same-deps/mod1/ivys/ivy-1.0.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"multiple-same-deps"
+argument_list|,
+literal|"mod31"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"mod31"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"multiple-same-deps"
+argument_list|,
+literal|"mod32"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"mod32"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"multiple-same-deps"
+argument_list|,
+literal|"mod33"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"mod33"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ConfigurationResolveReport
+name|runtimeReport
+init|=
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"runtime"
+argument_list|)
+decl_stmt|;
+name|runtimeReport
+operator|.
+name|getModuleRevisionIds
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|parse
+argument_list|(
+literal|"multiple-same-deps#mod31;1.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|runtimeReport
+operator|.
+name|getModuleRevisionIds
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|parse
+argument_list|(
+literal|"multiple-same-deps#mod32;1.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|runtimeReport
+operator|.
+name|getModuleRevisionIds
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|parse
+argument_list|(
+literal|"multiple-same-deps#mod33;1.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ConfigurationResolveReport
+name|compileReport
+init|=
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"compile"
+argument_list|)
+decl_stmt|;
+name|runtimeReport
+operator|.
+name|getModuleRevisionIds
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|parse
+argument_list|(
+literal|"multiple-same-deps#mod31;1.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|runtimeReport
+operator|.
+name|getModuleRevisionIds
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|parse
+argument_list|(
+literal|"multiple-same-deps#mod32;1.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|runtimeReport
+operator|.
+name|getModuleRevisionIds
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|parse
+argument_list|(
+literal|"multiple-same-deps#mod33;1.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveTransitiveExcludesSimple
 parameter_list|()
 throws|throws
